# const-generic-wrap

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  typenum_bridge.rs
