[package]
name = "const-generic-wrap"
version = "0.1.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["typenum","unstable"]
unstable = []

[dependencies]
typenum = {version = "1.13.0", optional = true}