[package]
name = "const-generic-wrap"
version = "0.2.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["const-generics", "no-std"]
description = "Simple wrapper for const generics."
repository = "https://github.com/aobatact/const-generic-wrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
unstable = []

[dependencies]
typenum = {version = "1.13.0", optional = true}